# ansys-tools-protoc-helper

./: .buildinfo  .gitignore  .pre-commit-config.yaml  AUTHORS  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  README.rst  apidoc.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg
.github/: CODEOWNERS
.github/workflows/: ci.yml  releases.yml
_static/: search.json
ansys/tools/protoc_helper/: __init__.py  _compile_protos.py  _distutils_overrides.py
doc/: .gitignore
doc/source/: apidoc.rst  conf.py  index.rst
src/ansys/tools/protoc_helper/: __init__.py  _build_helper.py  _compile_protos.py  _distutils_overrides.py
test/: .gitignore  conftest.py  greeter.json  run_test.sh  test_integration.py
test/greeter/ansys/api/greeter/v0/: greeter.proto  greeter2.proto
test/hello/ansys/api/hello/v0/: hello.proto  hello2.proto
test/test_data/: .gitignore
test/test_data/testpkg-greeter-protos/: pyproject.toml  setup.py
test/test_data/testpkg-greeter-protos/src/testpkg/api/greeter/v0/: greeter.proto  greeter2.proto
test/test_data/testpkg-greeter-protos/testpkg/api/greeter/v0/: greeter.proto  greeter2.proto  greeter3.proto
test/test_data/testpkg-hello-protos/: setup.py
test/test_data/testpkg-hello-protos/testpkg/api/hello/: hello.proto
test/test_data/testpkg-hello-protos/testpkg/api/hello/v0/: hello.proto
test/test_data/testpkg-hello-protos/testpkg/api/hello/v1/nested/: hello.proto
test/test_data/testpkg-hello2-protos/: pyproject.toml  setup.py
test/test_data/testpkg-hello3-protos/: MANIFEST.in  setup.py
test/test_data/testpkg-hello3-protos/src/py/testpkg/api/hello3/: hello_helper.py
test/test_data/testpkg-hello3-protos/src/testpkg/api/hello3/: hello.proto
test_pkg/: pyproject.toml  setup.py
test_pkg/src/dir_a/pkg_name/: .gitignore
test_pkg/src/dir_a/pkg_name/sub/a/: a.py
test_pkg/src/dir_b/pkg_name/sub/b/: b.py
