[metadata]
name = ansys-tools-protoc-helper
author = ANSYS, Inc.
version = attr: ansys.tools.protoc_helper.__version__

[options]
package_dir =
    = src
python_requires = >=3.7
install_requires =
    grpcio-tools==1.0.0
    protobuf==3.19.1
    mypy-protobuf
packages = find:

[options.packages.find]
where = src
